[package]
name = "crypto-tk-rs"
version = "0.1.0"
authors = ["OpenSSE Project", "Raphael Bost <raphael_bost@alumni.brown.edu>"]
edition = "2018"

description = "OpenSSE's Rust cryptographic toolkit"
homepage = "https://opensse.github.io/"
repository = "https://github.com/OpenSSE/crypto-tk-rs/"
readme = "README.md"
categories = ["cryptography"]
keywords = ["cryptography", "crypto-library"]
license = "AGPL-3.0-or-later"

[features]
default = ["rayon"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
zeroize = {version = "^1.1", features = ["zeroize_derive"]}
rand = "^0.7.0"
blake2b_simd = "^0.5.10"
chacha20 = "^0.6.0"
clear_on_drop = "^0.2.3"
num-traits =  "^0.2.11"
rayon = { version = "^1.5", optional = true }
