[package]
name = "crypto-tk-rs"
version = "0.1.0"
authors = ["OpenSSE Project", "Raphael Bost <raphael_bost@alumni.brown.edu>"]
edition = "2018"

description = "OpenSSE's Rust cryptographic toolkit"
homepage = "https://opensse.github.io/"
repository = "https://github.com/OpenSSE/crypto-tk-rs/"
readme = "README.md"
categories = ["cryptography"]
keywords = ["cryptography", "crypto-library"]
license = "AGPL-3.0-or-later"

[features]
default = ["rayon"]

[dev-dependencies]
criterion = "^0.3"
strum = "^0.23"
strum_macros = "^0.24"
hex = "0.4.3"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
zeroize = {version = "<1.5", features = ["zeroize_derive"]}
zeroize_derive = "<1.3"
rand = "^0.8.4"
blake2b_simd = "^1.0.0"
chacha20 = "^0.8.1"
chacha20poly1305 = "^0.9.0"
clear_on_drop = "^0.2.3"
rayon = { version = "^1.5", optional = true }
thiserror = "1.0"